MyAllowanceManager_25-4-2020-Changed input type for Update Allowance entry. Updated comments for UpdateAllowance source code for future documentation purpose.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="button_update_expense">Update expense</string>
     <string name="button_change">Confirm</string>
     <string name="app_name">My Allowance Manager</string>
+    <string name="allowance_entry_type">Enter an amount...</string>
 </resources>
